kubeflow-deployments/gcp-private-0527/.build/iap-ingress/apps_v1_deployment_iap-enabler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iap-enabler
  namespace: istio-system
  labels:
    kustomize.component: iap-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      kustomize.component: iap-ingress
  template:
    metadata:
      labels:
        service: iap-enabler
        kustomize.component: iap-ingress
    spec:
      restartPolicy: Always
      serviceAccountName: kf-admin
      containers:
      - name: iap
        image: gcr.io/gcp-private-dev/ingress-setup:latest
        command:
        - bash
        - /var/envoy-config/setup_backend.sh
        volumeMounts:
        - name: config-volume
          mountPath: /var/envoy-config/
      volumes:
      - name: config-volume
        configMap:
          name: envoy-config
