kubeflow-deployments/gcp-private-0527/.build/iap-ingress/apps_v1_deployment_whoami-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-app
  namespace: istio-system
  labels:
    kustomize.component: iap-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      kustomize.component: iap-ingress
  template:
    metadata:
      labels:
        app: whoami
        kustomize.component: iap-ingress
    spec:
      containers:
      - name: app
        image: gcr.io/cloud-solutions-group/esp-sample-app:1.0.0
        ports:
        - containerPort: 8081
        readinessProbe:
          failureThreshold: 2
          httpGet:
            port: 8081
            path: /healthz
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
