kubeflow-deployments/gcp-private-0527/.build/iap-ingress/apps_v1_statefulset_backend-updater.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: backend-updater
  namespace: istio-system
  labels:
    service: backend-updater
    kustomize.component: iap-ingress
spec:
  selector:
    matchLabels:
      service: backend-updater
      kustomize.component: iap-ingress
  template:
    metadata:
      labels:
        service: backend-updater
        kustomize.component: iap-ingress
    spec:
      serviceAccountName: kf-admin
      containers:
      - name: backend-updater
        image: gcr.io/gcp-private-dev/ingress-setup:latest
        command:
        - bash
        - /var/envoy-config/update_backend.sh
        volumeMounts:
        - name: config-volume
          mountPath: /var/envoy-config/
      volumes:
      - name: config-volume
        configMap:
          name: envoy-config
  volumeClaimTemplates: []
  serviceName: backend-updater
